[package]
name = "sia_info_personal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "view"
path = "src/view.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
